--- a/zen-wellness/style.css
+++ b/zen-wellness/style.css
@@ -789,12 +789,18 @@ div.site-title {
 		top: 20px;
 		background-color: transparent;
 	}
+
+	#header-menu a {
+		color: rgb(255, 255, 255);
+		transition: color 0.5s ease;
+	}
 }
 
 .site-header {
 	background-color: transparent;
 	transition: background-color 0.5s ease, box-shadow 0.5s ease, opacity 0.5s ease;
 }
+
 
 #zen-wellness-logo path {
 	transition: fill 0.5s ease;
