--- a/zen-wellness/style.css
+++ b/zen-wellness/style.css
@@ -392,7 +392,7 @@ template {
 
 html {
 	box-sizing: border-box;
-	margin-top: 0 !important;
+	margin-top: -25px !important;
 }
 
 /*--------------------------------------------------------------
@@ -740,15 +740,15 @@ ul#header-menu.menu.nav-menu {
 
 div.site-title {
 	text-align: center;
-	margin-top: -15px;
+	margin: 5px 0 4px;
 }
 
 @media screen and (min-width: 37.5em) {
 
 	div.site-title {
 		text-align: left;
-		max-width: 80rem;
-		margin: 0 auto;
+		max-width: 75rem;
+		margin: 8px auto 7px;
 	}
 
 	div.site-title a {
@@ -786,7 +786,7 @@ div.site-title {
 		display: flex;
 		justify-content: center;
 		position: absolute;
-		top: 20px;
+		top: 26px;
 		background-color: transparent;
 	}
 
