--- a/zen-wellness/style.css
+++ b/zen-wellness/style.css
@@ -408,7 +408,7 @@ select,
 optgroup,
 textarea {
 	color: #404040;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: "Questrial", "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-size: 1rem;
 	line-height: 1.5;
 }
@@ -668,6 +668,9 @@ textarea {
 
 .main-navigation a {
 	color: #FFFFFF;
+	font-weight: 500;
+	font-size: larger;
+
 }
 
 .main-navigation ul {
@@ -676,7 +679,7 @@ textarea {
 	margin: 0;
 	padding-left: 0;
 	position: absolute;
-	top: -103px;
+	top: -117px;
 	width: 100% !important;
 	text-align: center;
 	padding: 1rem;
@@ -786,7 +789,7 @@ div.site-title {
 		display: flex;
 		justify-content: center;
 		position: absolute;
-		top: 26px;
+		top: 24px;
 		background-color: transparent;
 	}
 
