--- a/zen-wellness/style.css
+++ b/zen-wellness/style.css
@@ -727,7 +727,6 @@ ul#header-menu.menu.nav-menu {
 }
 
 .main-navigation a {
-	display: block;
 	text-decoration: none;
 }
 
@@ -738,6 +737,17 @@ ul#header-menu.menu.nav-menu {
 	background: transparent;
 	border: 0;
 	float: right;
+	width: 5rem;
+}
+
+.home-button {
+	display: flex;
+	justify-content: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	padding: 8px;
 	width: 5rem;
 }
 
@@ -762,6 +772,8 @@ div.site-title {
 		margin-left: 1rem;
 	}
 
+
+	.home-button,
 	.menu-toggle {
 		display: none;
 	}
