--- a/zen-wellness/style.css
+++ b/zen-wellness/style.css
@@ -500,6 +500,7 @@ ol {
 
 ul {
 	list-style: disc;
+	padding-left: 1rem;
 }
 
 ol {
@@ -846,17 +847,33 @@ div.site-title {
 
 	#menu-item-50 {
 		position: relative;
-		top: -8px;
+		top: -9px;
 	}
 }
 
-@media screen and (min-width: 38em) {
+@media screen and (min-width: 46em) {
 	.rmt-info {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		gap: 2rem 4rem;
-		max-width: 54rem;
+		gap: 3rem;
+		max-width: 58rem;
 		margin: 0 auto;
+	}
+
+	.rmt-info > div:nth-child(1),
+	.rmt-info > div:nth-child(3) {
+		padding-left: 1rem;
+		padding-right: 0 !important;
+	}
+	
+	.rmt-info > div:nth-child(2),
+	.rmt-info > div:nth-child(4) {
+		padding-right: 1rem;
+		padding-left: 0 !important;
+	}
+
+	.rmt-info > div:nth-child(3) {
+		margin-top: 0 !important;
 	}
 }
 
@@ -864,6 +881,15 @@ div.site-title {
 	background-color: #FFFFFF;
 	box-shadow: 0 6px 6px rgba(0, 0, 0, 0.25);
 	margin: 4rem 0;
+	padding-bottom: 1.5rem;
+}
+
+.rmt-info > div:not(:first-child) {
+	padding: 0 1rem;
+}
+
+.rmt-info > div:nth-child(3) {
+	margin-top: 4rem;
 }
 
 .rmt-info-book-btn {
@@ -875,6 +901,7 @@ div.site-title {
 	border-radius: 4px;
 	transform: translateX(-50%);
 	font-size: large;
+	margin-top: 2rem;
 }
 
 #menu-item-50 {
@@ -977,7 +1004,7 @@ li.main-team-nav {
 }
 
 li.main-contact-nav {
-	padding-top: 6.95rem;
+	padding-top: 7.3rem;
 }
 
 li.main-team-nav svg,
