minor style changes

--- a/zen-wellness/style.css
+++ b/zen-wellness/style.css
@@ -931,9 +931,12 @@ THE .no-scroll CLASS IS PULLED INTO navigation.js, lines 40, 43, and 127*/
 
 	.instagram {
 		max-width: 60rem;
-		margin: 0 auto 4rem;
 		padding: 0 1rem;
 	}
+}
+
+.instagram {
+	margin: 0 auto 4rem;
 }
 
 @media screen and (min-width: 46em) {
