--- a/zen-wellness/style.css
+++ b/zen-wellness/style.css
@@ -568,6 +568,53 @@ a:active {
 	outline: 0;
 }
 
+/* HOME BUTTON FOR MOBILE */
+.home-button {
+	display: flex;
+	justify-content: center;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	padding: 8px;
+	width: 5rem;
+}
+
+@media screen and (min-width: 37.5em) {
+	.home-button {
+		display: none;
+	}
+}
+
+/* MY PORTFOLIO URL IN THE FOOTER SECTION */
+.website-url {
+	text-decoration: underline;
+}
+
+.rmt-info-book-btn {
+	display: inline-block;
+	background-color: #734F96;
+	padding: 5px 10px;
+	position: relative;
+	left: 50%;
+	border-radius: 4px;
+	transform: translateX(-50%);
+	font-size: large;
+	margin-top: 2rem;
+}
+
+.rmt-team-book-btn {
+	display: inline-block;
+	background-color: #734F96;
+	padding: 5px 10px;
+	position: relative;
+	left: 50%;
+	border-radius: 4px;
+	transform: translateX(-50%);
+	font-size: large;
+	margin-top: 0.5rem;
+}
+
 /* Forms
 --------------------------------------------- */
 button,
@@ -679,25 +726,85 @@ input {
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
+	}
+	
+	/*--------------------------------------------------------------
+	# Layouts
+	--------------------------------------------------------------*/
+
+	.site-footer {
+		background-color: #52366D;
+		color: #FFFFFF;
+		margin-bottom: -24px;
+		padding: 2rem 0;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		line-height: initial;
+	}
+
+	.site-footer .email {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	
+	.site-footer .email p {
+		margin: 0.5rem 0.5rem 0.5rem 1rem;
+	}
+	
+	.site-footer .email img {
+		width: 3rem;
+		padding: 0.7rem;
+		border-radius: 30%;
+	}
+	
+	.site-footer .email img:hover {
+		background-color: #68448d;
+	}
+	
+	.site-footer .email img:active {
+		background-color: #604080;
+	}
+
+	@media screen and (min-width: 37.5em) {
+		.site-footer {
+			padding: 2rem 0 0;
+		}
+	}
+	
+	/*--------------------------------------------------------------
+	# Components
+	--------------------------------------------------------------*/
+	
+	/* Navigation
+	--------------------------------------------- */
+
+/* FOR BETTER UX. USER CANNOT SCROLL WHILE NAVIGATION BAR IS OPEN IN MOBILE.
+THE .no-scroll CLASS IS PULLED INTO navigation.js, lines 40, 43, and 127*/
+.no-scroll::before {
+	content: "";
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5); /* 50% transparent white */
+	pointer-events: none; /* Allows clicks to pass through the overlay */
+	z-index: 999;
 }
 
-/*--------------------------------------------------------------
-# Layouts
---------------------------------------------------------------*/
+.no-scroll {
+	overflow: hidden;
+}
 
-/*--------------------------------------------------------------
-# Components
---------------------------------------------------------------*/
-
-/* Navigation
---------------------------------------------- */
 .main-navigation {
 	display: block;
-	width: 100%;
-	background-color: #734F96;
-	position: fixed;
-	bottom: -1px;
-	/* border-top: 3px solid #E6E6FA; */
+width: 100%;
+background-color: #734F96;
+position: fixed;
+bottom: -1px;
+/* border-top: 3px solid #E6E6FA; */
 }
 
 .main-navigation a {
@@ -735,10 +842,6 @@ input {
 ul#header-menu.menu.nav-menu {
 	background: #734F96;
 	/* border-top: 3px solid #E6E6FA; */
-}
-
-.disable-click {
-	pointer-events: none;
 }
 
 .main-navigation ul ul {
@@ -792,80 +895,10 @@ ul#header-menu.menu.nav-menu {
 	padding: 3px 0;
 }
 
-.home-button {
-	display: flex;
-	justify-content: center;
-	position: absolute;
-	left: 0;
-	right: 0;
-	margin: 0 auto;
-	padding: 8px;
-	width: 5rem;
-}
-
 div.site-title {
 	text-align: center;
 	margin: 6px 0 0;
 }
-
-.website-url {
-	text-decoration: underline;
-}
-
-.email {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.email p {
-	margin: 0.5rem 0.5rem 0.5rem 1rem;
-}
-
-.email img {
-	width: 3rem;
-	padding: 0.7rem;
-	border-radius: 30%;
-}
-
-.email img:hover {
-	background-color: #68448d;
-}
-
-.email img:active {
-	background-color: #604080;
-}
-
-
-.site-footer {
-	background-color: #52366D;
-	color: #FFFFFF;
-	margin-bottom: -24px;
-	padding: 2rem 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	line-height: initial;
-}
-
-/* FOR BETTER UX. USER CANNOT SCROLL WHILE NAVIGATION BAR IS SHOWING IN MOBILE.
-THE .no-scroll CLASS IS PULLED INTO navigation.js, lines 40, 43, and 127*/
-.no-scroll::before {
-	content: "";
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5); /* 50% transparent white */
-	pointer-events: none; /* Allows clicks to pass through the overlay */
-	z-index: 999;
-}
-
-.no-scroll {
-	overflow: hidden;
-}
-
 
 @media screen and (min-width: 37.5em) {
 	div.site-title {
@@ -882,14 +915,12 @@ THE .no-scroll CLASS IS PULLED INTO navigation.js, lines 40, 43, and 127*/
 		margin-left: 1.5rem;
 	}
 
-
-	.home-button,
-	.menu-toggle {
-		display: none;
-	}
-
 	.main-navigation.toggled ul {
 		display: flex;
+	}
+
+	.menu-toggle {
+		display: none;
 	}
 
 	ul#header-menu.menu.nav-menu {
@@ -921,10 +952,6 @@ THE .no-scroll CLASS IS PULLED INTO navigation.js, lines 40, 43, and 127*/
 	#header-menu.menu.nav-menu a {
 		color: rgb(255, 255, 255);
 		transition: color 0.5s ease;
-	}
-
-	.site-footer {
-		padding: 2rem 0 0;
 	}
 
 	#menu-item-50 {
@@ -1080,30 +1107,6 @@ THE .no-scroll CLASS IS PULLED INTO navigation.js, lines 40, 43, and 127*/
 
 .rmt-info > div:nth-child(3) {
 	margin-top: 4rem;
-}
-
-.rmt-info-book-btn {
-	display: inline-block;
-	background-color: #734F96;
-	padding: 5px 10px;
-	position: relative;
-	left: 50%;
-	border-radius: 4px;
-	transform: translateX(-50%);
-	font-size: large;
-	margin-top: 2rem;
-}
-
-.rmt-team-book-btn {
-	display: inline-block;
-	background-color: #734F96;
-	padding: 5px 10px;
-	position: relative;
-	left: 50%;
-	border-radius: 4px;
-	transform: translateX(-50%);
-	font-size: large;
-	margin-top: 0.5rem;
 }
 
 .rmt-conditions li {
@@ -1495,4 +1498,8 @@ div.wp-block-group__inner-container.is-layout-constrained.wp-block-group-is-layo
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 1.5em;
+}
+
+.disable-click {
+	pointer-events: none;
 }
